fd locking is bust on wsl1 :( this is gonna end up killing wsl1 usage isn't it

--- a/stack.yaml
+++ b/stack.yaml
@@ -23,3 +23,7 @@ ghc-options:
 drop-packages:
 # See https://github.com/commercialhaskell/stack/pull/4712
 - cabal-install
+
+flags:
+  lukko:
+    ofd-locking: false
