disable schedule ci

--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -9,8 +9,8 @@ on:
       - rc/**
     tags:
       - '**'
-  schedule:
-  - cron: "0 0 * * *"
+#   schedule:
+#   - cron: "0 0 * * *"
   workflow_dispatch:
 
 jobs:
