--- a/cabal.config
+++ b/cabal.config
@@ -5,9 +5,10 @@ constraints:
   , OneTuple ==0.3.1
   , QuickCheck ==2.14.2
   , StateVar ==1.2.2
+  , Win32 ==2.12.0.1
   , aeson ==2.0.3.0
   , annotated-wl-pprint ==0.7.0
-  , ansi-terminal ==0.11.3
+  , ansi-terminal ==0.11.4
   , ansi-wl-pprint ==0.6.9
   , appar ==0.1.8
   , array ==0.5.4.0
@@ -19,14 +20,14 @@ constraints:
   , attoparsec ==0.14.4
   , attoparsec-iso8601 ==1.0.2.1
   , auto-update ==0.1.6
-  , base ==4.16.3.0
+  , base ==4.16.4.0
   , base-compat ==0.12.2
   , base-compat-batteries ==0.12.2
   , base-orphans ==0.8.7
   , base16-bytestring ==1.0.2.0
   , base64-bytestring ==1.2.1.0
   , basement ==0.0.15
-  , bifunctors ==5.5.12
+  , bifunctors ==5.5.14
   , binary ==0.8.9.0
   , blaze-builder ==0.4.2.2
   , blaze-html ==0.9.1.2
@@ -41,20 +42,21 @@ constraints:
   , cmdargs ==0.10.21
   , colour ==2.3.6
   , comonad ==5.0.8
-  , conduit ==1.3.4.2
+  , conduit ==1.3.4.3
   , conduit-combinators ==1.3.0
   , conduit-extra ==1.3.6
   , connection ==0.3.1
   , containers ==0.6.5.1
   , contravariant ==1.5.5
-  , cookie ==0.4.5
+  , cookie ==0.4.6
   , cryptohash-sha256 ==0.11.102.1
   , cryptonite ==0.30
   , cryptonite-conduit ==0.2.2
+  , data-array-byte ==0.1.0.1
   , data-default-class ==0.1.2.0
   , data-fix ==0.3.2
   , deepseq ==1.4.6.1
-  , digest ==0.0.1.3
+  , digest ==0.0.1.4
   , directory ==1.3.6.2
   , distributive ==0.6.2.1
   , dlist ==1.0
@@ -70,15 +72,15 @@ constraints:
   , fsnotify ==0.4.1.0
   , generic-deriving ==1.14.2
   , ghc-bignum ==1.2
-  , ghc-boot-th ==9.2.4
+  , ghc-boot-th ==9.2.5
   , ghc-prim ==0.8.0
-  , githash ==0.1.6.2
-  , hackage-security ==0.6.2.2
-  , hashable ==1.4.1.0
+  , githash ==0.1.6.3
+  , hackage-security ==0.6.2.3
+  , hashable ==1.4.2.0
   , hi-file-parser ==0.1.3.0
   , hinotify ==0.4.1
   , hourglass ==0.2.12
-  , hpack ==0.35.0
+  , hpack ==0.35.1
   , hpc ==0.6.1.0
   , http-api-data ==0.4.3
   , http-client ==0.7.13.1
@@ -93,14 +95,14 @@ constraints:
   , integer-logarithms ==1.0.3.1
   , iproute ==1.7.12
   , libyaml ==0.1.2
-  , lift-type ==0.1.0.1
+  , lift-type ==0.1.1.1
   , lifted-base ==0.2.3.12
   , lukko ==0.1.1.3
   , megaparsec ==9.2.2
   , memory ==0.17.0
   , microlens ==0.4.12.0
-  , microlens-mtl ==0.2.0.2
-  , microlens-th ==0.4.3.10
+  , microlens-mtl ==0.2.0.3
+  , microlens-th ==0.4.3.11
   , mime-types ==0.1.0.9
   , mintty ==0.1.4
   , monad-control ==1.0.3.1
@@ -112,13 +114,13 @@ constraints:
   , mustache ==2.4.1
   , neat-interpolation ==0.5.1.3
   , network ==3.1.2.7
-  , network-uri ==2.6.4.1
+  , network-uri ==2.6.4.2
   , old-locale ==1.0.0.7
   , old-time ==1.1.0.3
   , open-browser ==0.2.1.0
   , optparse-applicative ==0.17.0.0
   , optparse-simple ==0.1.1.4
-  , pantry ==0.7.0
+  , pantry ==0.8.1
   , parsec ==3.1.15.0
   , parser-combinators ==1.3.0
   , path ==0.9.2
@@ -130,7 +132,7 @@ constraints:
   , persistent-template ==2.12.0.0
   , pretty ==1.1.3.6
   , primitive ==0.7.3.0
-  , process ==1.6.13.2
+  , process ==1.6.16.0
   , project-template ==0.2.1.0
   , random ==1.2.1.1
   , resource-pool ==0.2.3.2
@@ -138,7 +140,7 @@ constraints:
   , retry ==0.9.3.0
   , rio ==0.1.22.0
   , rio-orphans ==0.1.2.0
-  , rio-prettyprint ==0.1.1.0
+  , rio-prettyprint ==0.1.4.0
   , rts ==1.0.2
   , safe ==0.3.19
   , safe-exceptions ==0.1.7.3
@@ -153,9 +155,9 @@ constraints:
   , stack ==2.10.0
   , stm ==2.5.0.2
   , stm-chans ==3.0.0.6
-  , streaming-commons ==0.2.2.4
+  , streaming-commons ==0.2.2.5
   , strict ==0.4.0.1
-  , syb ==0.7.2.1
+  , syb ==0.7.2.2
   , tagged ==0.8.6.1
   , tar ==0.5.1.1
   , tar-conduit ==0.3.2
@@ -164,7 +166,7 @@ constraints:
   , text ==1.2.5.0
   , text-metrics ==0.3.2
   , text-short ==0.1.5
-  , th-abstraction ==0.4.4.0
+  , th-abstraction ==0.4.5.0
   , th-compat ==0.1.4
   , th-expand-syns ==0.4.10.0
   , th-lift ==0.8.2
@@ -178,12 +180,12 @@ constraints:
   , transformers-base ==0.4.6
   , transformers-compat ==0.7.2
   , typed-process ==0.2.10.1
-  , unicode-data ==0.3.0
+  , unicode-data ==0.3.1
   , unicode-transforms ==0.4.0.1
   , unix ==2.7.2.2
   , unix-compat ==0.5.4
-  , unix-time ==0.4.7
-  , unliftio ==0.2.22.0
+  , unix-time ==0.4.8
+  , unliftio ==0.2.23.0
   , unliftio-core ==0.2.0.1
   , unordered-containers ==0.2.19.1
   , uuid-types ==1.0.5
@@ -196,5 +198,5 @@ constraints:
   , x509-system ==1.6.7
   , x509-validation ==1.6.12
   , yaml ==0.11.8.0
-  , zip-archive ==0.4.2.1
+  , zip-archive ==0.4.2.2
   , zlib ==0.6.3.0
