--- a/stack.cabal
+++ b/stack.cabal
@@ -295,7 +295,7 @@ library
     , generic-deriving
     , hackage-security
     , hashable
-    , hi-file-parser
+    , hi-file-parser >=0.1.4.0
     , hpack
     , hpc
     , http-client
@@ -419,7 +419,7 @@ executable stack
     , generic-deriving
     , hackage-security
     , hashable
-    , hi-file-parser
+    , hi-file-parser >=0.1.4.0
     , hpack
     , hpc
     , http-client
@@ -542,7 +542,7 @@ executable stack-integration-test
     , generic-deriving
     , hackage-security
     , hashable
-    , hi-file-parser
+    , hi-file-parser >=0.1.4.0
     , hpack
     , hpc
     , hspec
@@ -673,7 +673,7 @@ test-suite stack-test
     , generic-deriving
     , hackage-security
     , hashable
-    , hi-file-parser
+    , hi-file-parser >=0.1.4.0
     , hpack
     , hpc
     , hspec
