--- a/package.yaml
+++ b/package.yaml
@@ -78,7 +78,7 @@ dependencies:
 - generic-deriving
 - hackage-security
 - hashable
-- hi-file-parser
+- hi-file-parser >= 0.1.4.0
 - hpack
 - hpc
 - http-client
